[package]
name = "cdr_decoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cdr_decoder"
crate-type = ["cdylib", "rlib"]

[dependencies]
flate2 = "1.1.1"
indicatif = "0.17.11"
walkdir = "2.5.0"

[dependencies.pyo3]
version = "0.23.1"
features = ["extension-module", "abi3-py38"]
