[package]
name = "cdr_decoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cdr_decoder"
crate-type = ["cdylib", "rlib"]

[dependencies]
colored = "3.0.0"
flate2 = "1.1.1"
indicatif = "0.17.11"
maturin = "1.8.3"
serde = {version ="1.0.219", features = ["derive"]} 
serde_json = "1.0.140"
strum = "0.27"
strum_macros = "0.27"
walkdir = "2.5.0"

[dependencies.pyo3]
version = "0.24.2"
features = ["extension-module", "abi3-py38"]



[profile.release]
opt-level = 3
debug = false
lto = true
panic = 'abort'
